# Kubeflow-Platform

./: .gitignore  AGENTS.md  README-SECURITY.md  deploy-production.sh  k8s-secrets.yaml  pipeline-production-secure.py  pipeline.py  pipeline.yaml  pyproject.toml  secure-pipeline.py
.claude/agents/: mlops-code-reviewer.md
k8s/: irsa-setup.yaml  monitoring-stack.yaml  production-deployment.yaml  rbac-network-policies.yaml  resource-limits.yaml
