[project]
name = "kubeflow-platform"
version = "0.1.0"
description = "Kubeflow ML pipeline for iris classification with S3 model storage"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aider-install>=0.2.0",
    "kfp>=2.13.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "boto3>=1.28.0",
]
